--- a/ps/jenkins/ps80-binary-tarball.yml
+++ b/ps/jenkins/ps80-binary-tarball.yml
@@ -1,5 +1,5 @@
 - job:
-    name: test-ps80-binary-tarball-pro
+    name: ps80-binary-tarball
     project-type: pipeline
     description: |
         Do not edit this job through the web!
