--- a/ps/jenkins/ps80-binary-tarball.yml
+++ b/ps/jenkins/ps80-binary-tarball.yml
@@ -1,14 +1,14 @@
 - job:
-    name: ps80-binary-tarball
+    name: test-ps-binary-tarball
     project-type: pipeline
     description: |
         Do not edit this job through the web!
     pipeline-scm:
       scm:
         - git:
-            url: https://github.com/grishma123-eng/jenkins-pipelines.git
+            url: https://github.com/Percona-lab/jenkins-pipelines.git
             branches:
-            - 'site-checks-fix'
+            - 'master'
             wipe-workspace: true
       lightweight-checkout: true
       script-path: ps/jenkins/ps80-binary-tarball.groovy
